# assembly_planning

./: .gitignore  .pylintrc  CMakeLists.txt  README.md  package.xml
.block_mover/: CMakeLists.txt
.block_mover/launch/: overhead_kinect.launch
.block_mover/models/: camera_robot.urdf
.block_mover/scripts/: baxter_controller.py  camera_synchronizer.py
block_detector/: CMakeLists.txt  README.md  block_detector_config.rviz  package.xml  setup.py
block_detector/launch/: hand_block_detector.launch  top_block_detector.launch
block_detector/msg/: BlockPixelLoc.msg
block_mover/: CMakeLists.txt  README.md  package.xml
block_mover/launch/: block_mover.launch
block_mover/models/kinect_ros/: model.sdf
block_mover/msg/: BlockObservation.msg  BlockObservationArray.msg  BlockPixelLoc.msg  BlockPixelLocArray.msg
block_mover/scripts/: block_detector.py  block_finder.py  block_mover.py  block_picker.py  block_planner.py  block_spawner.py  calibrate_extrinsics.py  camera_controller.py  camera_synchronizer.py  center_object.py  edge_finder.py  hand_block_detector.py  state_estimator.py  synchronize_camera.py  top_block_detector.py  top_to_base_bc.py
block_mover/src/: camera_robot.urdf
block_mover/worlds/: block_and_camera  block_and_camera.world
find_blocks/: CMakeLists.txt  package.xml
include/: agent.h  lego_world.h  meta_reasoner.h  rule_based_planner.h
lego_gazebo/: CMakeLists.txt  README.MD  README.md  package.xml
metareasoning/: CMakeLists.txt  package.xml  setup.py
metareasoning_agent/: CMakeLists.txt  README.md  package.xml  setup.py
scripts/: agent_test.py  env_state_test.py
src/: meta_reasoner.cc
test/: utest.cpp
(+154 files in other folders)
