<?xml version="1.0"?>
<package format="2">
  <name>block_mover</name>
  <version>0.0.0</version>
  <description>The block_mover package</description>

  <maintainer email="jameslathamsmith@gmail.com">james</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>rospack</depend>
  <depend>baxter_core_msgs</depend>
  <depend>baxter_gazebo</depend>
  <depend>baxter_interface</depend>
  <depend>baxter_tools</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>

</package>
